<resources>
    <string name="app_name">TechYard</string>
    <string name="mail">Enter your email</string>
    <string name="password">Enter password</string>
    <string name="passwordagain">Re-enter password</string>
    <string name="login">LOGIN</string>
    <string name="login2">Log In</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="sitcontinue">Sign In to continue,</string>
    <string name="getstarted">Create an account</string>
    <string name="sutc">Sign Up to get started</string>
    <string name="fpassword">Forgot Password?</string>
    <string name="dhac">Don\'t have an account?</string>
    <string name="ahac">Already have an account?</string>
    <string name="googlelog">Log In With Google</string>
    <string name="googlesignup">Sign Up With Google</string>
    <string name="logout">Log Out</string>
    <string name="logout2">Log Out 2</string>
    <string name="signup">Sign Up</string>
    <string name="forgot">Reset password</string>
    <string name="recover">Enter email to reset</string>
    <string name="entermail">Enter email</string>
    <string name="exit">Exit</string>
    <string name="surety">Are you sure you want to exit?</string>

</resources>
